# flow-genius

./: .env.example  .gitignore  README.md  pyproject.toml  railway.json  run_app.sh
app/: main.py
app/api/v1/: reservations.py  router.py
app/api/v1/controllers/: agent_controllers.py
app/api/v1/routes/: agent_routes.py  conversation.py  router.py
app/config/: settings.py
app/models/: reservation.py
core/: agent.py  chat.py  execute_action.py
core/constants/: prompts.py
core/models/: intents.py
core/text_format/: message_format.py
openapi/: klarna.json  klarna.yaml  pet.yaml
strapi-client/booking-mookup/: README.md  package-lock.json  package.json
strapi-client/booking-mookup/src/api/guest/content-types/guest/: schema.json
strapi-client/booking-mookup/src/api/guest/controllers/: guest.js
strapi-client/booking-mookup/src/api/guest/routes/: guest.js
strapi-client/booking-mookup/src/api/guest/services/: guest.js
strapi-client/booking-mookup/src/api/reservation/content-types/reservation/: schema.json
strapi-client/booking-mookup/src/api/reservation/controllers/: reservation.js
strapi-client/booking-mookup/src/api/reservation/routes/: reservation.js
strapi-client/booking-mookup/src/api/reservation/services/: reservation.js
strapi-client/booking-mookup/src/api/room/content-types/room/: schema.json
streamlit/: Home.py
streamlit/pages/: 2_Magical_World_Hotel_Demo.py  3_Configuration.py
templates/: base.json  hotel.json  intents.json
